Fri Oct  2 17:26:35 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (LD_SHARED1): typo.

Fri Oct  2 17:09:38 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_fptr_finalize): free fptr to avoid memory leaks.
	  fixed: #2009   [ruby-core:25173] [ruby-dev:39410]

Fri Oct  2 13:54:46 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (rb_origenviron): remove unused old variable.
	  [ruby-dev:39412]

Fri Oct  2 13:53:48 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/{setup.mak,Makefile.sub,win32.c} (RT_VER): split compiler
	  specification and runtime library specification.

	* win32/Makefile.sub (LD_SHARED*, config.status): no need to embbed
	  manifest if not exist.

Fri Oct  2 13:38:52 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_getpid): simply call GetCurrentProcessId()
	  instead of calling MSVCRT's getpid().

Sat Sep 26 13:32:00 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/net/http.rb (transport_request): Handle timeout error by
	  closing socket if exception raised. [ruby-core:20976]

Fri Sep 25 04:34:08 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/rational.rb (#+, #-, #/, #**, #<=>): Return correct error
	  message in case coercion fails. Based on a patch by Run Paint Run Run
	  [ruby-core:23903]

Thu Sep 24 15:52:34 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* instruby.rb: win32/win32.h exists in srcdir.
	  reported by arton ( http://www.artonx.org/diary/20090919.html#p01 )

Thu Sep 24 12:30:50 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (subtract): if the parameters are same value, should
	  return zero.

Thu Sep 24 12:01:11 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_select): of course, need to initialize rest.

Thu Sep 24 10:26:16 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* ext/openssl/ossl_config.c (ossl_config_add_value_m,
	  ossl_config_set_section): Check if frozen (or untainted for $SECURE >=